@@ -1,3 +1,8 @@
+2002-05-06  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* scripts/lilypond-book.py: Add html/dtml output, pseudo-filter
+	capability, --verbose option, rlimit hack.
+
 2002-05-05  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
 	* lily/piano-pedal-engraver.cc: cleanups.
